Fix FullNavbar position on small devices

--- a/frontend/components/Navbar/components/FullNavbar/FullNavbar.module.scss
+++ b/frontend/components/Navbar/components/FullNavbar/FullNavbar.module.scss
@@ -7,7 +7,7 @@
 
     width: 100%;
     max-width: 240px;
-    height: 100vh;
+    height: 100%;
 
     background-color: var(--background-color);
 
@@ -39,6 +39,7 @@
 @media (max-width: map-get($media-breakpoints, extra-large)) {
     .full-navbar {
         position: fixed;
-        height: 100vh;
+        top: 0;
+        left: 0;
     }
 }
